--- a/BusStationSystem/Views/Shared/_Layout.cshtml
+++ b/BusStationSystem/Views/Shared/_Layout.cshtml
@@ -3,28 +3,71 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Learn with Us</title>
+    <title>@ViewData["Title"] - BusStation System</title>
 
-    <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="~/css/site.css">
+    <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 </head>
 <body>
-    
-    <div id="renderedBody" class="pt-3 pb-3 mb-5 container">
+
+    <nav class="navbar navbar-expand-sm  bg-dark navbar-dark fixed-top h5">
+        @if (User.Identity.IsAuthenticated)
+        {
+            @if (User.IsInRole(BusStationSystem.BLL.Constants.Roles.director))
+            {
+                <ul class=" navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Home" asp-action="Index">Головна</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" asp-controller="" asp-action="">1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="" asp-action="">2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="" asp-action="">3</a>
+                    </li>
+                </ul>
+
+            }
+            else
+            {
+                <ul class=" navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Home" asp-action="Index">Головна</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" asp-controller="" asp-action="">1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="" asp-action="">2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="" asp-action="">3</a>
+                    </li>
+                </ul>
+            }
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="Account" asp-action="LogOff">Вихід</a>
+                </li>
+            </ul>
+        }
+    </nav>
+
+    <div class="pt-3 pb-3 mb-5 mt-4 container bg-light">
         @RenderBody()
     </div>
-    <footer class="fixed-bottom p-1 text-center">
+    <footer class="bg-dark fixed-bottom p-1 text-center">
         <div class="container">
-            <span class="text-center">© AnMar - 2018</span>
+            <span class="text-white">© GlobalAzuk - 2018</span>
         </div>
     </footer>
-
 
     <script src="~/js/site.js"></script>
     @RenderSection("Scripts", required: false)
