--- a/BusStationSystem/Views/Account/Login.cshtml
+++ b/BusStationSystem/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BusStationSystem.ViewModels.LoginVM
 @{
-    ViewData["Title"] = "Реєстрація";
+    ViewData["Title"] = "Вхід";
 }
 
 <br />
@@ -12,7 +12,7 @@
             <form method="post" asp-controller="Account" asp-action="Login">
                 <div asp-validation-summary="All"></div>
                 <div class="form-group">
-                    <input asp-for="UserName" class="form-control" placeholder="Ім'я користувача">
+                    <input asp-for="UserNameSurname" class="form-control" placeholder="Ім'я користувача">
                 </div>
                 <div class="form-group">
                     <input asp-for="Password" class="form-control" placeholder="Password">
