--- a/BusStationSystem/Views/DirectorCabinet/Register.cshtml
+++ b/BusStationSystem/Views/DirectorCabinet/Register.cshtml
@@ -4,7 +4,7 @@
 }
 
 <br />
-<h2 class="text-center"><strong>Реєстрація</strong></h2>
+<h2 class="text-center"><strong>Реєстрація нового працівника</strong></h2>
 <br />
 <div class="container-fluid h-100">
     <div class="row justify-content-center align-items-center h-100">
@@ -21,7 +21,7 @@
                     <input asp-for="PasswordConfirm" class="form-control" placeholder="Пітвердити пароль">
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Зареєстуватися" class="btn btn-lg btn-block" />
+                    <input type="submit" value="Зареєстувати" class="btn btn-lg btn-block" />
                 </div>
             </form>
         </div>
