--- a/BusStationSystem/Views/Shared/_Layout.cshtml
+++ b/BusStationSystem/Views/Shared/_Layout.cshtml
@@ -20,17 +20,26 @@
             @if (User.IsInRole(BusStationSystem.BLL.Constants.Roles.director))
             {
                 <ul class=" navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="Home" asp-action="Index">Головна</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            Працівники
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" asp-controller="DirectorCabinet" asp-action="Register">Реєстрація</a>
+                            <a class="dropdown-item" asp-controller="DirectorCabinet" asp-action="ViewPersonal">Перегляд</a>
+                        </div>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" asp-controller="" asp-action="">1</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            Маршути
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" asp-controller="DirectorCabinet" asp-action="AddRoute">Додати новий</a>
+                            <a class="dropdown-item" asp-controller="DirectorCabinet" asp-action="ViewRoutes">Перегляд</a>
+                        </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="" asp-action="">2</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="" asp-action="">3</a>
+                        <a class="nav-link" asp-controller="" asp-action="">Автобуси</a>
                     </li>
                 </ul>
 
