--- a/BusStationSystem/Views/DirectorCabinet/ViewPersonal.cshtml
+++ b/BusStationSystem/Views/DirectorCabinet/ViewPersonal.cshtml
@@ -17,7 +17,7 @@
             </td>
             <td>
                 <form asp-action="ViewUserActivety" asp-route-id="@user.Id" method="post">
-                    <button type="submit" class="btn btn-sm btn-danger">
+                    <button type="submit" class="btn btn-sm btn-success">
                         Активність
                     </button>
                 </form>
