--- a/BusStationSystem/Views/Shared/_Layout.cshtml
+++ b/BusStationSystem/Views/Shared/_Layout.cshtml
@@ -38,8 +38,14 @@
                             <a class="dropdown-item" asp-controller="DirectorCabinet" asp-action="ViewRoutes">Перегляд</a>
                         </div>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="" asp-action="">Автобуси</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            Автобуси
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" asp-controller="DirectorCabinet" asp-action="AddBus">Додати новий</a>
+                            <a class="dropdown-item" asp-controller="DirectorCabinet" asp-action="ViewBuses">Перегляд</a>
+                        </div>
                     </li>
                 </ul>
 
