--- a/BusStationSystem/Views/DirectorCabinet/ViewBuses.cshtml
+++ b/BusStationSystem/Views/DirectorCabinet/ViewBuses.cshtml
@@ -7,24 +7,25 @@
 <h2 class="text-center"><strong>Усі автобуси</strong></h2>
 <br />
 <table class="table">
-    <tr><th>Номерний знак</th><th>Тип автобуса</th><th>К-сть місць</th><th></th><th></th></tr>
+    <tr><th>Id маршуту</th><th>Номерний знак</th><th>Тип автобуса</th><th>К-сть місць</th><th></th><th></th></tr>
     @foreach (var bus in Model)
     {
-        <tr>
-            <td>@bus.BusNumber</td>
-            <td>@bus.Type</td>
-            <td>@bus.PlaceCount</td>
+    <tr>
+        <td>@bus.RouteId</td>
+        <td>@bus.BusNumber</td>
+        <td>@bus.Type</td>
+        <td>@bus.PlaceCount</td>
 
-            <td>
-                <a class="btn btn-sm btn-primary" asp-action="EditBus" asp-route-id="@bus.BusNumber">Редагувати</a>
-            </td>
-            <td>
-                <form asp-action="DeleteBus" asp-route-id="@bus.BusNumber" method="post">
-                    <button type="submit" class="btn btn-sm btn-danger">
-                        Видалити
-                    </button>
-                </form>
-            </td>
-        </tr>
+        <td>
+            <a class="btn btn-sm btn-primary" asp-action="EditBus" asp-route-id="@bus.BusNumber">Редагувати</a>
+        </td>
+        <td>
+            <form asp-action="DeleteBus" asp-route-id="@bus.BusNumber" method="post">
+                <button type="submit" class="btn btn-sm btn-danger">
+                    Видалити
+                </button>
+            </form>
+        </td>
+    </tr>
     }
 </table>
