Додано можливість перегляду активності конкрентно користувача Додано можливість перегляду історії продажу квитків за поточний місяць Додано відповідні репозиторії Виправлено реєстрацію нових користувачів Виправлено модель квитка

--- a/BusStationSystem/Views/DirectorCabinet/Register.cshtml
+++ b/BusStationSystem/Views/DirectorCabinet/Register.cshtml
@@ -9,7 +9,7 @@
 <div class="container-fluid h-100">
     <div class="row justify-content-center align-items-center h-100">
         <div class="col-sm-3 col-10 offset-2 offset-sm-0">
-            <form method="post" asp-controller="AdminCabinet" asp-action="Register">
+            <form method="post" asp-controller="DirectorCabinet" asp-action="Register">
                 <div asp-validation-summary="All"></div>
                 <div class="form-group">
                     <input asp-for="UserName" class="form-control" placeholder="Ім'я користувача">
