Save all previous configuration. dev start

--- a/BusStationSystem/Views/Shared/_Layout.cshtml
+++ b/BusStationSystem/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
     </div>
     <footer class="bg-dark fixed-bottom p-1 text-center">
         <div class="container">
-            <span class="text-white">© GlobalAzuk - 2018</span>
+            <span class="text-white">© Global - 2018</span>
         </div>
     </footer>
 
