--- a/BusStationSystem/Views/Employee/SellTicket.cshtml
+++ b/BusStationSystem/Views/Employee/SellTicket.cshtml
@@ -11,8 +11,8 @@
                     <input asp-for="RouteNumber" value="@Model.RouteNumber" hidden />
                 </div>
                 <div class="form-group">
-                    <label asp-for="ClientID" class="control-label">Продати</label>
-                    <input asp-for="ClientID" class="form-control" />
+                    <label asp-for="ClientName" class="control-label">Продати</label>
+                    <input asp-for="ClientName" class="form-control" />
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Зберегти" class="btn btn-lg btn-block" />
