--- a/BusStationSystem/Views/_ViewImports.cshtml
+++ b/BusStationSystem/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-@using BusStationSystem
+@using BusStationSystem.ViewModels
 @using BusStationSystem.Models
+@using BusStationSystem.DAL.Entities
+@using BusStationSystem.DAL.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
