--- a/BusStationSystem/Views/DirectorCabinet/AddRoute.cshtml
+++ b/BusStationSystem/Views/DirectorCabinet/AddRoute.cshtml
@@ -1,4 +1,4 @@
-﻿@model BusStationSystem.ViewModels.RoutesVM
+﻿@model AddRouteVM
 @{
     ViewData["Title"] = "Додати маршут";
 }
@@ -13,19 +13,22 @@
             {
                 <div asp-validation-summary="All"></div>
                 <div class="form-group">
-                    <input asp-for="RouteType" class="form-control" placeholder="RouteType">
+                    <input asp-for="Price" class="form-control" placeholder="Price">
                 </div>
                 <div class="form-group">
-                    <input asp-for="Destination" class="form-control" placeholder="Destination">
+                    <select asp-for="Departure" asp-items="@Model.Departures" class="form-control"></select>
                 </div>
                 <div class="form-group">
-                    <input asp-for="DetartureDate" class="form-control" placeholder="DetartureDate">
+                    <input asp-for="DetartureDate" class="form-control" placeholder="ProductionYear">
                 </div>
                 <div class="form-group">
-                    <input asp-for="ArrivalDate" class="form-control" placeholder="ArrivalDate">
+                    <select asp-for="Arrival" asp-items="@Model.Arrivals" class="form-control"></select>
                 </div>
                 <div class="form-group">
-                    <input asp-for="BusNumber" class="form-control" placeholder="BusNumber">
+                    <input asp-for="ArrivalDate" class="form-control" placeholder="ProductionYear">
+                </div>
+                <div class="form-group">
+                    <select asp-for="Bus" asp-items="@Model.Buses" class="form-control"></select>
                 </div>
                 <div class="form-group col-6 offset-3">
                     <input type="submit" value="Додати" class="btn btn-lg btn-block" />
