--- a/BusStationSystem/Views/DirectorCabinet/AddStation.cshtml
+++ b/BusStationSystem/Views/DirectorCabinet/AddStation.cshtml
@@ -1,25 +1,25 @@
-﻿@model Client
+﻿@model Station
 @{
-    ViewData["Title"] = "Додати клієнта";
+    ViewData["Title"] = "Додати станцію";
 }
 
 <br />
-<h2 class="text-center"><strong>Додавання нового клієнта</strong></h2>
+<h2 class="text-center"><strong>Додавання нової станції</strong></h2>
 <br />
 <div class="container-fluid h-100">
     <div class="row justify-content-center align-items-center h-100">
         <div class="col-sm-6 col-10 offset-2 offset-sm-0">
-            @using (Html.BeginForm("AddClient", "DirectorCabinet", FormMethod.Post))
+            @using (Html.BeginForm("AddStation", "DirectorCabinet", FormMethod.Post))
             {
                 <div asp-validation-summary="All"></div>
                 <div class="form-group">
-                    <input asp-for="FirstName" class="form-control" placeholder="FirstName">
+                    <input asp-for="Country" class="form-control" placeholder="Country">
                 </div>
                 <div class="form-group">
-                    <input asp-for="LastName" class="form-control" placeholder="LastName">
+                    <input asp-for="City" class="form-control" placeholder="City">
                 </div>
                 <div class="form-group">
-                    <input asp-for="Adress" class="form-control" placeholder="Adress">
+                    <input asp-for="StationName" class="form-control" placeholder="StationName">
                 </div>
                 <div class="form-group col-6 offset-3">
                     <input type="submit" value="Додати" class="btn btn-lg btn-block" />
