--- a/BusStationSystem/Views/DirectorCabinet/EditBus.cshtml
+++ b/BusStationSystem/Views/DirectorCabinet/EditBus.cshtml
@@ -1,36 +1,36 @@
-﻿@model BusStationSystem.ViewModels.BusVM;
+﻿@model Bus;
 @{
     ViewData["Title"] = "Редагування";
 }
 
 <br />
-<h2 class="text-center"><strong>Редагування даних автобуса @Model.BusNumber</strong></h2>
+<h2 class="text-center"><strong>Редагування даних автобуса @Model.Make @Model.Model</strong></h2>
 <br />
 <div class="container-fluid h-100">
     <div class="row justify-content-center align-items-center h-100">
         <div class="col-sm-3 col-10 offset-2 offset-sm-0">
-            <form asp-action="EditUser" asp-controller="AdminCabinet">
+            @using (Html.BeginForm("EditBus", "DirectorCabinet", FormMethod.Post))
+            {
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="BusNumber" class="control-label">Номер автобуса</label>
-                    <input asp-for="BusNumber" class="form-control" />
+                    <input asp-for="Id" hidden/>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Type" class="control-label">Тип</label>
-                    <input asp-for="Type" class="form-control" />
+                    <label asp-for="Make" class="control-label">Make</label>
+                    <input asp-for="Make" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="PlaceCount" class="control-label">К-сть місць</label>
-                    <input asp-for="PlaceCount" class="form-control" />
+                    <label asp-for="Model" class="control-label">Model</label>
+                    <input asp-for="Model" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="RouteId" class="control-label">Id маршуту</label>
-                    <input asp-for="RouteId" class="form-control" />
+                    <label asp-for="ProductionYear" class="control-label">ProductionYear</label>
+                    <input asp-for="ProductionYear" class="form-control" />
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Зберегти" class="btn btn-lg btn-block" />
                 </div>
-            </form>
+            }
         </div>
     </div>
 </div>
