--- a/BusStationSystem/Views/DirectorCabinet/ViewRoutes.cshtml
+++ b/BusStationSystem/Views/DirectorCabinet/ViewRoutes.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BusStationSystem.ViewModels.RoutesVM>
+﻿@model IEnumerable<Route>
 @{
     ViewData["Title"] = "Перегляд маршутів";
 }
@@ -6,27 +6,22 @@
 <br />
 <h2 class="text-center"><strong>Дані маршутів</strong></h2>
 <br />
-<table class="table">
-    <tr><th>Напрямок</th><th>Номерний знак</th><th>Тип автобуса</th><th>К-сть</th><th>Зайнято</th><th></th><th></th></tr>
-    @foreach (var route in Model)
-    {
-    <tr>
-        <td>@route.Destination</td>
-        <td>@route.BusNumber</td>
-        <td>@route.BusType</td>
-        <td>@route.PlaceCount</td>
-        <td>@route.OccupiedPlaceCount</td>
-
-        <td>
-            <a class="btn btn-sm btn-primary" asp-action="EditRoute" asp-route-id="@route.RouteNumber">Редагувати</a>
-        </td>
-        <td>
-            <form asp-action="DeleteRoute" asp-route-id="@route.RouteNumber" method="post">
-                <button type="submit" class="btn btn-sm btn-danger">
+@foreach (var route in Model)
+{
+    <div class="card">
+        <h2 class="card-header text-center">@route.Departure.City - @route.Arrival.City</h2>
+        <div class="card-body">
+            <span class="price">@route.Price$</span>
+            <h4 class="card-text">From <span class='station'>@route.Departure.OneLine()</span> to <span class='station'>@route.Arrival.OneLine()</span></h4>
+            <h5>Departure at: <span class='time'>@route.DetartureDate</span></h5>
+            <h5>Arrival at: <span class='time'>@route.ArrivalDate</span></h5>
+            <h6>Bus: @route.Bus.OneLine()</h6>            
+            <form asp-action="DeleteRoute" asp-route-id="@route.Id" method="post">
+                <button type="submit" class="btn btn-sm btn-danger float-right">
                     Видалити
                 </button>
-            </form>
-        </td>
-    </tr>
-    }
-</table>
+            </form>  
+            <a class="btn btn-sm btn-primary" asp-action="EditRoute" asp-route-id="@route.Id">Редагувати</a>
+        </div>
+    </div>
+}
