--- a/BusStationSystem/wwwroot/css/site.css
+++ b/BusStationSystem/wwwroot/css/site.css
@@ -64,3 +64,23 @@ input.input-validation-error {
 .validation-summary-valid {
     display: none;
 }
+
+.price {
+    float: right;
+    background-color: aqua;
+    display: block;
+    border-radius: 50%;
+    padding: 10px 20px;
+    font-size: 2em;
+}
+
+.station {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: darkblue;
+}
+
+.time {
+    font-weight: bold;
+    color: darkred;
+}
