--- a/BusStationSystem/Views/Shared/_Layout.cshtml
+++ b/BusStationSystem/Views/Shared/_Layout.cshtml
@@ -65,6 +65,11 @@
                             <a class="dropdown-item" asp-controller="DirectorCabinet" asp-action="ViewStations">Перегляд</a>
                         </div>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-action="ViewClientsByAdress" asp-controller="DirectorCabinet" id="navbardrop" data-toggle="dropdown">
+                            Клієнти з квитком за адресою
+                        </a>                        
+                    </li>
                 </ul>
 
             }
