--- a/BusStationSystem/Views/Shared/_Layout.cshtml
+++ b/BusStationSystem/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class=" navbar-nav mr-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                            Працівники
+                            Персонал
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" asp-controller="DirectorCabinet" asp-action="Register">Реєстрація</a>
