--- a/BusStationSystem/Views/DirectorCabinet/Register.cshtml
+++ b/BusStationSystem/Views/DirectorCabinet/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model BusStationSystem.ViewModels.RegisterVM
+﻿@model RegisterVM
 @{
     ViewData["Title"] = "Реєстрація";
 }
@@ -21,8 +21,12 @@
                     <input asp-for="PasswordConfirm" class="form-control" placeholder="Пітвердити пароль">
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Зареєстувати" class="btn btn-lg btn-block" />
+                    <select asp-for="Role" asp-items="@Model.Roles" class="form-control"></select>
                 </div>
+                <div class="form-group">
+                    <input type="submit" value="Зареєстувати" class="btn btn-lg btn-block" />
+                </div>                
             </form>
         </div>
     </div>
+</div>
