--- a/BusStationSystem/Views/Shared/_Layout.cshtml
+++ b/BusStationSystem/Views/Shared/_Layout.cshtml
@@ -92,6 +92,15 @@
                             <a class="dropdown-item" asp-controller="Employee" asp-action="ViewRoutes">Перегляд</a>
                         </div>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            Клієнти
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" asp-controller="Employee" asp-action="AddClient">Додати нового</a>
+                            <a class="dropdown-item" asp-controller="Employee" asp-action="ViewClients">Перегляд</a>
+                        </div>
+                    </li>
                 </ul>
             }
             <ul class="navbar-nav">
