--- a/BusStationSystem/Views/Shared/AddClient.cshtml
+++ b/BusStationSystem/Views/Shared/AddClient.cshtml
@@ -9,8 +9,7 @@
 <div class="container-fluid h-100">
     <div class="row justify-content-center align-items-center h-100">
         <div class="col-sm-6 col-10 offset-2 offset-sm-0">
-            @using (Html.BeginForm("AddClient", "DirectorCabinet", FormMethod.Post))
-            {
+            <form method="post" asp-action="AddClient">
                 <div asp-validation-summary="All"></div>
                 <div class="form-group">
                     <input asp-for="FirstName" class="form-control" placeholder="FirstName">
@@ -24,7 +23,7 @@
                 <div class="form-group col-6 offset-3">
                     <input type="submit" value="Додати" class="btn btn-lg btn-block" />
                 </div>
-            }
+            </form>
         </div>
     </div>
 </div>
