--- a/BusStationSystem/Views/Shared/_Layout.cshtml
+++ b/BusStationSystem/Views/Shared/_Layout.cshtml
@@ -113,6 +113,26 @@
                     </li>
                 </ul>
             }
+            @if (User.IsInRole(BusStationSystem.BLL.Constants.Roles.owner))
+            {
+                <ul class=" navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" asp-action="Index">
+                            Index
+                        </a>
+                    </li>    
+                    <li class="nav-item">
+                        <a class="nav-link" asp-action="DeleteCurrent">
+                            Delete Current
+                        </a>
+                    </li> 
+                    <li class="nav-item">
+                        <a class="nav-link" asp-action="AddNew">
+                            Add new
+                        </a>
+                    </li> 
+                </ul>
+            }
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="Account" asp-action="LogOff">Вихід</a>
