--- a/BusStationSystem/Views/Owner/AddNew.cshtml
+++ b/BusStationSystem/Views/Owner/AddNew.cshtml
@@ -4,32 +4,30 @@
 }
 
 <br />
-<h2 class="text-center"><strong>Директор</strong></h2>
+<h2 class="text-center"><strong>Додати нового</strong></h2>
 <br />
 
-@if (Model.Name == null)
+@if (Model.Name != null)
 {
-    <p>No current director</p>
+    <p>One is already checked</p>
 }
 else
 {
     <table class="table">
-        <tr>
-            <th>Name</th>
-            <th></th>
-            <th></th>
-            <th></th>
-        </tr>
-        <tr>
-            <td>@Model.Name</td>
-            <td>
-                <form asp-action="DeleteCurrent" asp-route-id="@Model.Id" method="post">
-                    <button type="submit" class="btn btn-sm btn-danger">
-                        Видалити з посади
-                    </button>
-                </form>
-            </td>
-        </tr>
+        <tr><th>Ім'я та прізвище</th><th></th></tr>
+        @foreach (var user in Model.Employees)
+        {
+            <tr>
+                <td>@user.Name</td>
+                <td>
+                    <form asp-action="AddNew" asp-route-id="@user.Id" method="post">
+                        <button type="submit" class="btn btn-sm btn-danger">
+                            Підвищити до директора
+                        </button>
+                    </form>
+                </td>
+            </tr>
+        }
     </table>
 }
 
